crates/jrsonnet-ir-parser/src/snapshots/jrsonnet_ir_parser__tests__basic_math.snap
---
source: crates/jrsonnet-ir-parser/src/lib.rs
assertion_line: 1094
expression: "format!(\"{v:#?}\")"
---
BinaryOp(
    BinaryOp {
        lhs: Trivial(
            Num(
                2.0,
            ),
        ),
        op: Add,
        rhs: BinaryOp(
            BinaryOp {
                lhs: Trivial(
                    Num(
                        2.0,
                    ),
                ),
                op: Mul,
                rhs: Trivial(
                    Num(
                        2.0,
                    ),
                ),
            },
        ),
    },
)
