crates/jrsonnet-ir-parser/src/snapshots/jrsonnet_ir_parser__tests__error_expr.snap
---
source: crates/jrsonnet-ir-parser/src/lib.rs
assertion_line: 1161
expression: "format!(\"{v:#?}\")"
---
ErrorStmt(
    virtual:<test>:0-5,
    Trivial(
        Str(
            "bad",
        ),
    ),
)
