crates/jrsonnet-ir-parser/src/snapshots/jrsonnet_ir_parser__tests__function_and_call.snap
---
source: crates/jrsonnet-ir-parser/src/lib.rs
expression: "format!(\"{v:#?}\")"
---
LocalExpr(
    [
        Function {
            name: "f",
            params: ExprParams {
                exprs: [
                    ExprParam {
                        destruct: Full(
                            "x" from virtual:<test>:8-9,
                        ),
                        default: None,
                    },
                    ExprParam {
                        destruct: Full(
                            "y" from virtual:<test>:11-12,
                        ),
                        default: Some(
                            Num(
                                1.0,
                            ),
                        ),
                    },
                ],
                signature: FunctionSignature(
                    [
                        ParamParse {
                            name: Named(
                                "x",
                            ),
                            default: None,
                        },
                        ParamParse {
                            name: Named(
                                "y",
                            ),
                            default: Exists,
                        },
                    ],
                ),
                binds_len: 2,
            },
            value: BinaryOp(
                BinaryOp {
                    lhs: Var(
                        "x" from virtual:<test>:18-19,
                    ),
                    op: Add,
                    rhs: Var(
                        "y" from virtual:<test>:22-23,
                    ),
                },
            ),
        },
    ],
    Apply(
        Var(
            "f" from virtual:<test>:25-26,
        ),
        ArgsDesc {
            unnamed: [
                Num(
                    2.0,
                ),
            ],
            names: [
                "y",
            ],
            values: [
                Num(
                    3.0,
                ),
            ],
        } from virtual:<test>:26-34,
        false,
    ),
)
