crates/jrsonnet-ir-parser/src/snapshots/jrsonnet_ir_parser__tests__if_then_else.snap
---
source: crates/jrsonnet-ir-parser/src/lib.rs
assertion_line: 1124
expression: "format!(\"{v:#?}\")"
---
IfElse(
    IfElse {
        cond: IfSpecData {
            span: virtual:<test>:0-2,
            cond: Trivial(
                Bool(
                    true,
                ),
            ),
        },
        cond_then: Trivial(
            Num(
                1.0,
            ),
        ),
        cond_else: Some(
            Trivial(
                Num(
                    2.0,
                ),
            ),
        ),
    },
)
